Fixed bug #75797

Fix zend_register_class_alias_ex() to use non-persistent strings
for (non-persistent) userland classes.